<resources>
    <string name="app_name">Itinergo</string>
    <string name="text_sign_in">Welcome</string>
    <string name="text_sign_in2">Explorer!</string>
    <string name="email">Email</string>
    <string name="input_email">Input Email</string>
    <string name="input_username_or_email">Input Username or Email</string>
    <string name="password">Password</string>
    <string name="input_password">Input Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Don\'t have an account? <font color="#FD865B"> Sign Up</font></string>
    <string name="loginGoogle">login with google</string>
    <string name="name">Name</string>
    <string name="input_name">Input Name</string>
    <string name="register">Register</string>
    <string name="text_register"> Let\'s Start</string>
    <string name="text_register2"> the journey!</string>
    <string name="sudah_punya_akun">Already Have account? <font color="#FD865B"> Sign In</font></string>
    <string name="welcome">Welcome</string>
    <string name="text_splashscreen">Explore.\nInspire.</string>
    <string name="text_btn_splashscreen">Get Started</string>
    <string name="or">Or</string>
    <string name="place_of_today">Place of Today!</string>
    <string name="explore">Explore</string>
    <string name="countries">Countries</string>
    <string name="cities">Cities</string>
    <string name="carbon">Carbon</string>
    <string name="travel_budgeting">Budgeting</string>
    <string name="travel_tips">Tips</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alam">Alam</string>
    <string name="pegunungan">Pegunungan</string>
    <string name="sejarah_budaya"><![CDATA[Sejarah & budaya]]></string>
    <string name="tempat_rekreasi">Tempat Rekreasi</string>
    <string name="tempat_ibadah">Tempat Ibadah</string>
    <string name="desa_wisata">Desa Wisata</string>
    <string name="perbelanjaan">Perbelanjaan</string>
    <string name="edukasi">Edukasi</string>
    <string name="username">Username</string>
    <string name="input_username">Input Username</string>
    <string name="done">Done</string>
    <string name="here_you_go">Here you go, Explorer!</string>
    <string name="send_email">Send Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="you_re_almost_here">You\'re almost there</string>
    <string name="email_has_been_sent">A link has been sent to your email</string>
    <string name="didn_t_receive_an_email">Didn\'t receive an email?</string>
    <string name="check_email_spam">Check your email spam or junk files</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_place">Place</string>
    <string name="title_saved_place">Saved Place</string>
    <string name="title_account">Account</string>
    <string name="description_place_today">Nestled in the heart of the North Halmahera Regency in Maluku, Indonesia, Tanjung Bongo awaits travelers seeking an untouched paradise. Often referred to as the “Miniature Raja Ampat,” the hidden gem offers a pristine natural experience that rivals its more famous counterpart. Tanjung Bongo is a symphony of islands scattered across the azure waters of the Indonesian archipelago. Each island contributes to the breathtaking panorama, adorned with lust greenery and surrounded by crystal-clear waters. The charm of Tanjung Bongo lies not only in its landscapes but in the serenity that envelops every corner.\n\nFurthermore, one cannot explore Tanjung Bongo without diving into its vibrant underwater world. The coral reefs here are a kaleidoscope of colors, home to a diverse array of marine life. Snorkeling or diving in these pristine waters reveals an underwater paradise where schools of fish dance around intricate coral formations.\n\nThe region’s unique ecosystem adds a layer of fascination to the experience. Rare species of flora and fauna thrive in the untouched landscapes, providing a haven for nature enthusiasts and wildlife lovers. The air is filled with the sweet fragrance of exotic flowers, creating an immersive experience for all senses.\n\nBeyond its natural wonders, Tanjung Bongo welcomes visitors with the warm hospitality of its local communities. Engaging with the local culture, tasting traditional cuisine, and participating in cultural activities provide a glimpse into the authentic Malukan way of life.</string>
    <string name="home_introduction">Hi, Fany!</string>
    <string name="introduction_home_desc">Where do you want to explore?</string>
    <string name="home_section_title">Plan your itinerary!</string>
    <string name="find_trip">Find Trip</string>
    <string name="input_city">Input City</string>
    <string name="city">City</string>
    <string name="budget">Budget</string>
    <string name="newbie">Newbie\n500XP</string>
    <string name="seasonal">Seasonal\n1000XP</string>
    <string name="traveller">Traveller\n2000XP</string>
    <string name="explorer">Explorer\n3000XP</string>
    <string name="points_xp">+50XP: Join a trip\n+100XP: Add new places\n+150XP: Finish a trip from saved itinerary</string>
    <string name="logout">Log Out</string>
    <string name="add_new_place">Add a new place</string>
    <string name="country">Country</string>
    <string name="input_country">Input Country</string>
    <string name="month">Month</string>
    <string name="input_month">Input Month</string>
    <string name="year">Year</string>
    <string name="input_year">Input Year</string>
    <string name="image">Image</string>
    <string name="input_image">Input Image</string>
    <string name="upload">Upload</string>
    <string name="voila">Voila!</string>

    <string-array name="city">
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Bandung</item>
        <item>Semarang</item>
        <item>Surabaya</item>
        <item>Bengkulu</item>
        <item>Banjarbaru</item>
        <item>Denpasar</item>
        <item>Maluku</item>
        <item>Jayapura</item>
    </string-array>
    <string-array name="duration">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>